# advent-of-code-2022

./: .clang-format  .gitignore  CMakeLists.txt  README.md  at_scope_exit.h  forward.h  io.h  traits.h
day1/: day1_2.cpp  day1_small.in  day1_small_no_newline.in
day2/: day2_1.cpp  day2_2.cpp
day3/: day3_1.cpp  day3_2.cpp  lut.py
day4/: day4_1.cpp  day4_2.cpp
